// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrimaryButton /> matches disabled snapshot 1`] = `
<DocumentFragment>
  <button
    class="css-8ej8wd"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`<PrimaryButton /> matches snapshot 1`] = `
<DocumentFragment>
  <button
    class="css-16k50s1"
  >
    Label
  </button>
</DocumentFragment>
`;
